# mlops-recipes

./: LICENSE  README.md
Data orchestration/: Prefect.md
Databases/: duckdb.md
Experiment Tracking/: wandb.md
Meilisearch/: Meilisearch overview.md  meilisearch.py  meilisearch_example.py
Other Development Tools/: Black.md  Pylint.md  README.md  Ruff.md  pathlib.md  pdm.md  pre-commit.md  python-dotenv.md
Projects/Chat with PDF (Streamlit; 1 file)/: .env.draft  README.md  pyproject.toml
Projects/Chat with PDF (Streamlit; 1 file)/src/: app.py
Search/BM25/: intro.md
Search/BM25/animal_index_bm25/: data.csc.index.npy  indices.csc.index.npy  params.index.json  vocab.index.json
Search/BM25/bm25s/: bm25s.md  detailed_example.py  huggingface_integration.py  quickstart.py
Search/ElasticSearch/: intro.md
Search/Meilisearch/: Meilisearch overview.md
Testing/: examples.ipynb  test-containers.md
